--- a/DwarfRender.vcxproj.filters
+++ b/DwarfRender.vcxproj.filters
@@ -28,9 +28,6 @@
     <None Include="..\..\..\..\..\Desktop\cppPrograms\dependencies\SFML-2.4.2\bin\sfml-audio-2.dll" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="DwarfRender\main.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="DwarfRender.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -59,6 +56,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="imgui-SFML.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="DwarfRender\test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
